[package]
name = "cambridge-pseudocode-interpreter"
version = "0.1.2"
edition = "2021"
authors = ["Faisal Fakih <me@faisalfakih.com>"]
description = "A Rust-based interpreter for Cambridge International AS & A Level Computer Science (9618) pseudocode"
repository = "https://github.com/faisalfakih/cambridge-psudocode-inter"
homepage = "https://github.com/faisalfakih/cambridge-psudocode-inter"
documentation = "https://github.com/faisalfakih/cambridge-psudocode-inter"
readme = "README.md"
license = "MIT"
keywords = ["pseudocode", "interpreter", "cambridge", "education", "compiler"]
categories = ["command-line-utilities", "development-tools", "parser-implementations"]


[[bin]]
name = "cps"
path = "src/main.rs"

[dependencies]
clap = { version = "4.5.56", features = ["derive"] }
colored = "3.1.1"
rand = "0.9.2"
